# EDRP

./: .gitignore  Makefile  README.md  arp.h  build.sh  meson.build  meson_options.txt  ng-tcp.c  setup_dpdk.sh  tcp.c
Document/: prd.md  progress_log.md  project_srtucture.md
examples/basic/: meson.build  tcp_example.c  udp_example.c
socket/: arp.c  arp.h  arp_table.txt  edrp_socket.h  main.c  meson.build  socket.c  socket.h  tcp.c  tcp.h  udp.c  udp.h
socket/Old-code/: arp.h  socket.c  tcp.c  tcp.h  udp.h
socket/dpdk_init/: dpdk_eal_test.c  dpdk_init.h  extern_eal_init.c  meson.build
socket/include/mylib/: core.h  ex_logging.h
socket/src/: arp.c  core.c  dpdk_init.c  fd_manager.c  icmp.c  logging.c  rings.c  socket_api.c  tcp.c  udp.c
socket/src/internal/: arp_impl.h  common.h  dpdk_init.h  icmp_impl.h  logging.h  tcp_impl.h  udp_impl.h
socket/unit_test/: meson.build  test_common.h  test_init.c
socket/unit_tests/: CMakeLists.txt  run_tests.sh  test_init.c
